fixed overlap

--- a/BasketballApp/src/app/components/header/header.component.css
+++ b/BasketballApp/src/app/components/header/header.component.css
@@ -40,10 +40,26 @@ right: 0;
 .user-details{
   display: flex;
 }
+.small-header{
+  visibility: hidden;
+}
+
+.large-header{
+  visibility: visible;
+}
 
 @media screen and (max-width:900px) {
   .user-email{
     display: none;
+  }
+
+  .small-header{
+    visibility: visible;
+  }
+  
+  .large-header{
+    visibility: hidden;
+    width: 0px;
   }
 
 }
